# yaydl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  binaries.sh  index.html  package.json  tailwind.config.js
.github/workflows/: build.yml  check-deps.yml  release.yml
scripts/: bump-version.sh
src/: app.rs  main.rs
src-shared/: Cargo.toml  yt-dlp-version.txt
src-shared/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src-ui/: app.rs  main.rs  notification.rs  update_context.rs  update_modal.rs
style/: tailwind.css
