[package]
name = "yaydl-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yaydl-ui"
path = "src-ui/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_icons = "0.3.1"
icondata = "0.4.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
yaydl-shared = { workspace = true}

[workspace]
members = [ "src-shared","src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
yaydl-shared = { path = "./src-shared/" }
