[package]
name = "yaydl"
version = "0.1.0"
description = "Yet Another YouTube Downloader"
authors = ["NiklasRhf <65732627+niklasrhf@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "yaydl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
toml = "0.8.19"
