[package]
name = "yaydl"
version = "0.2.0"
description = "Yet Another YouTube Downloader"
authors = ["NiklasRhf <65732627+niklasrhf@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "yaydl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
zip = "2.2.0"
tar = "0.4.43"
xz2 = "0.1.7"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }

[dependencies]
dirs = "5.0.1"
serde = { workspace = true }
yaydl-shared = { workspace = true }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
toml = "0.8.19"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
